--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,8 @@
             "email": "weyna1649@gmail.com"
         }
     ],
-    "require": {}
-}
+    "require": {
+        "nesbot/carbon": "^1.21"
+    }
+
+    }
